Add Kubernetes watcher
